# hatch-flex

./: README.md  pyproject.toml
example/: pyproject.toml
example/src/: example.py
scripts/: build-example.zsh  entry-points.py
