[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hatch-flex"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.9"
description = "Hatch plugin to customize build dependencies"
keywords = ["hatch", "packaging", "build", "editable", "plugin"]
authors = [{ "name" = "furechan", "email" = "furechan@xsmail.com" }]
urls = { "homepage" = "https://github.com/furechan/hatch-flex" }
dependencies = ["hatchling"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.entry-points.hatch]
flex = "hatch_flex"

[tool.hatch.build]
targets.wheel.sources = ["src"]
dev-mode-dirs = ["src"]
include = ["src/*.py"]

