[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hatch-flex-example"
version = "0.0.0"
requires-python = ">=3.9"
description = "Example for Hatch Flex Plugin"

[tool.hatch.build.hooks.flex]
standard-dependencies = ["click"]

[tool.hatch.build]
dev-mode-dirs = ["."]
include = ["*.py"]

